# Kamisado

./: .gitignore  Arbiter.cpp  Arbiter.h  Board.cpp  Board.h  CMakeLists.txt  Case.cpp  Case.h  Display.cpp  Display.h  DisplayKamisado  IA.cpp  IA.h  IA_MCTS.cpp  IA_MCTS.h  IA_Minimax.cpp  IA_Minimax.h  IA_Ramdom.cpp  IA_Ramdom.h  IA_minmax.cpp  IA_minmax.h  Movement.cpp  Movement.h  Node.cpp  Node.h  OtherDisplay.cpp  OtherDisplay.h  Pion.cpp  Pion.h  README.md  Referee.cpp  Referee.h  default_board.kms  header.h  interface.py  main.cpp  mainDisplay.cpp  main_Display.cpp  main_arbiter.cpp  main_display.cpp  (+6 more)
